Updated fonts and fixed spacing to make project tiles more responsive.

--- a/css/main.css
+++ b/css/main.css
@@ -62,7 +62,7 @@ html {
 
 body {
   overflow-x: hidden;
-  font-family: "Roboto Slab", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Lato", Helvetica, sans-serif;
   color: var(--text-primary);
   background: var(--bg-light);
 }
@@ -71,14 +71,14 @@ h1 {
   color: var(--accent-dark);
   font-size: 1.75rem;
   font-weight: 800;
-  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Lato", Helvetica, sans-serif;
   margin-bottom: 0.75rem;
 }
 
 h2 {
   font-size: 1.5rem;
   font-weight: 600;
-  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Lato", Helvetica, sans-serif;
   margin-bottom: 0.75rem;
 }
 
@@ -99,6 +99,7 @@ a:hover {
 .subheading {
   color: var(--accent-light);
   font-style: italic;
+  font-family: "Lora", Times, sans-serif;
 }
 
 .list-unstyled {
@@ -117,6 +118,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  text-transform: uppercase;
   padding: 2% 0 5% 5vw;
   background: linear-gradient(#ffffff 50%, transparent);
 }
@@ -124,8 +126,7 @@ header {
 .logo {
   margin: 0;
   color: var(--text-primary);
-  font-family: "Kaushan Script", "Helvetica Neue", Helvetica, Arial, cursive;
-  font-weight: 400;
+  font-weight: 900;
 }
 
 /* allows menu button (input) to gain focus,
@@ -171,15 +172,12 @@ nav {
 
 nav li {
   margin-bottom: 1em;
-  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-weight: 400;
 }
 
 nav a {
   color: var(--text-primary);
   text-decoration: none;
   font-size: 1.25rem;
-  text-transform: uppercase;
   opacity: 0;
   transition: opacity 100ms ease-in-out;
 }
@@ -253,7 +251,7 @@ footer {
   background-image: linear-gradient(transparent, #e5dfd0);
   background-size: contain;
   display: grid;
-  grid-template-columns: minmax(10vw, 1fr) 75vw minmax(1em, 1fr);
+  grid-template-columns: minmax(1em, 2fr) 75vw minmax(1em, 1fr);
   padding: 2em 0;
   margin-bottom: 5em;
 }
@@ -271,6 +269,7 @@ footer {
   grid-row: 2;
   grid-column: 2 / 3;
   padding-left: 0.5rem;
+  text-transform: uppercase;
 }
 
 .proj-preview-hr {
